<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background"
    tools:context=".views.activities.GalleryActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="24dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/thumbnail" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_gallery">


        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/processing"
            android:textColor="@color/text_color_primary"
            android:textSize="48sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_probability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/probability"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            android:layout_below="@+id/tv_header"/>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>