<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/feature_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_margin="24dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center|fill"
            android:text="@string/feature_desc"
            android:textSize="18sp" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_gallery"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/feature_desc"
            android:layout_margin="24dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/rv_item_color">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_gallery"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/icon_gallery"
                    app:civ_border_width="2dp"
                    android:layout_margin="18dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    app:civ_border_color="@color/splash_background"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/iv_gallery">

                    <TextView
                        android:id="@+id/tv_header_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery_header"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/text_color_primary"
                        android:textStyle="bold"
                        android:textSize="24sp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_header_1"
                        android:fontFamily="@font/montserrat"
                        android:layout_marginEnd="8dp"
                        android:text="@string/gallery_desc"/>


                </RelativeLayout>


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_camera"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/cv_gallery"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/rv_item_color">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/icon_camera"
                    app:civ_border_width="2dp"
                    android:layout_margin="18dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    app:civ_border_color="@color/splash_background"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/iv_camera">

                    <TextView
                        android:id="@+id/tv_header_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/camera_header"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/text_color_primary"
                        android:textStyle="bold"
                        android:textSize="24sp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_header_2"
                        android:fontFamily="@font/montserrat"
                        android:layout_marginEnd="8dp"
                        android:text="@string/camera_desc"/>


                </RelativeLayout>


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

</ScrollView>